--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,18 +3,18 @@
 {
 	"name": "casinoRoyale",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+	"image": "mcr.microsoft.com/devcontainers/base:alpine",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	"containerEnv": {"PYTHONPATH": "/workspaces/pythonLib/src"},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [80, 8000],
 	"runArgs": ["--name", "casinoRoyale"],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install colorama",
+	"postCreateCommand": "sh /workspaces/casinoRoyale/.devcontainer/containerCreation.sh",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -30,5 +30,5 @@
 	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	//"remoteUser": "root"
 }
