--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
 				"GitHub.copilot-chat",
 				"GitHub.vscode-pull-request-github",
 				"donjayamanne.githistory",
-				"ms-python.python"
+				"ms-python.python",
+				"Microsoft.docker"
 			]
 		}
 	}
